--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/taj#readme",
   "devDependencies": {
+    "@types/node": "^14.6.2",
     "pegjs": "^0.10.0",
     "prettier": "2.0.5",
     "smart-banner-webpack-plugin": "^3.0.1",
