--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "types": "dist/ts/src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:grammar": "node build_helper/grammar.js",
-    "build": "npm run build:grammar && npm run webpack:dev",
+    "install:compiler": "node build_helper/compiler_installer.js",
+    "build": "npm run install:compiler && npm run webpack:dev",
     "build:pack": "npm run build && npm run webpack:test && npm pack",
     "build:install": "npm run build:pack && node tests/typescript/installer.js",
     "lint": "tslint src/**/*.ts",
-    "test:dev": "karma start test/karma.config.dev.js",
+    "test:general": "cd tests/typescript && npm run install:test",
+    "test:todo": "cd tests/todo && npm run install:test",
+    "test:dev": "npm run build && npm run test:general && npm run test:todo",
     "test:prod": "karma start test/karma.config.prod.js",
     "build:dev": "npm run lint && npm run build && npm run test:dev",
     "build:node": "webpack --config webpack/webpack.node.config.js",
@@ -36,9 +38,6 @@
   "devDependencies": {
     "@types/node": "^14.6.2",
     "copy-webpack-plugin": "^6.1.1",
-    "js-beautify": "^1.13.0",
-    "pegjs": "^0.10.0",
-    "prettier": "2.0.5",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
