--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "test:dev": "npm run build && npm run test:general",
     "test:prod": "karma start test/karma.config.prod.js",
     "build:dev": "npm run lint && npm run build && npm run test:dev",
-    "build:node": "webpack --config webpack/webpack.node.config.js",
     "build:prod": "npm run webpack:prod && npm run test:prod",
     "build:ci": "npm run build:dev && npm run build:prod",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
     "webpack:test": "webpack --config webpack/webpack.test.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
     "move:deploy_file": "node build_helper/deploy_helper.js",
-    "deploy": "npm run build:ci && npm run build:node && npm run move:deploy_file"
+    "deploy": "npm run build:ci && npm run move:deploy_file"
   },
   "repository": {
     "type": "git",
@@ -40,10 +39,11 @@
     "copy-webpack-plugin": "^6.1.1",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.2",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "webpack-merge": "^5.1.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.1.1"
   },
   "dependencies": {}
 }
