move test node_modules to root folder

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "install:compiler": "node build_helper/compiler_installer.js",
     "build": "npm run install:compiler && npm run webpack:dev",
     "build:pack": "npm run build && npm run webpack:test && npm pack",
-    "build:install": "npm run build:pack && node tests/typescript/installer.js",
+    "build:install": "npm run build:pack && node tests/installer.js",
     "lint": "tslint src/**/*.ts",
-    "test:general": "cd tests/typescript && npm run install:test",
+    "test:general": "cd tests && npm run install:test",
     "test:todo": "cd tests/todo && npm run install:test",
     "test:dev": "npm run build && npm run test:general",
     "test:prod": "karma start test/karma.config.prod.js",
