--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mahal",
-  "version": "0.21.0",
-  "description": "Simple, modern web application framework.",
+  "version": "0.22.0",
+  "description": "Simple, modern web application framework for UI development.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
   "scripts": {
