--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install dependencies
-        run: npm ci
+        run: npm ci 
+          | npm i mahal-html-compiler@latest
 
       # Runs a set of commands using the runners shell
       - name: Run test
