rm compiler install from build:ci

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:prod": "karma start test/karma.config.prod.js",
     "build:dev": "npm run lint && npm run build",
     "build:prod": "npm run webpack:prod",
-    "pack:test": "npm run build:pack && npm run test:dev",
-    "build:ci": "npm run build:dev && npm run build:prod && npm run pack:test",
+    "pack:test": "npm pack && npm run test:dev",
+    "build:ci": "npm run lint && npm run webpack:dev && npm run webpack:prod && npm run pack:test",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
     "webpack:test": "webpack --config webpack/webpack.test.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
