add webpack:test in build:ci

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build:dev": "npm run lint && npm run build",
     "build:prod": "npm run webpack:prod",
     "pack:test": "npm pack && npm run test:dev",
-    "build:ci": "npm run lint && npm run webpack:dev && npm run webpack:prod && npm run pack:test",
+    "build:all": "npm run webpack:dev && npm run webpack:prod && npm run webpack:test",
+    "build:ci": "npm run lint && npm run build:all && npm run pack:test",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
     "webpack:test": "webpack --config webpack/webpack.test.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
