--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "install:compiler": "node build_helper/compiler_installer.js",
     "build": "npm run webpack:dev",
-    "build:compiler": "npm run install:compiler && npm run webpack:dev",
+    "build:compiler:dev": "npm run install:compiler && npm run webpack:dev",
     "build:pack": "npm run build && npm run webpack:test && npm pack",
-    "build:test": "npm run build:pack && npm run test",
+    "build:test": "npm run install:compiler && npm run build:pack && npm run test",
     "build:test:dev": "npm run build:pack && cd tests && npm run install:dev",
     "test": "npm run test:general",
     "lint": "tslint src/**/*.ts",
@@ -20,7 +20,7 @@
     "test:prod": "karma start test/karma.config.prod.js",
     "build:dev": "npm run lint && npm run build",
     "build:prod": "npm run webpack:prod",
-    "pack:test": "npm pack && npm run test:dev",
+    "pack:test": "npm pack && npm run test",
     "build:all": "npm run webpack:dev && npm run webpack:prod && npm run webpack:test",
     "build:ci": "npm run lint && npm run build:all && npm run pack:test",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
