--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install dependencies
         run: npm ci 
-          | cd tests && npm i mahal-html-compiler@latest
+          | cd tests && npm un mahal-html-compiler && npm i mahal-html-compiler@latest
 
       # Runs a set of commands using the runners shell
       - name: Run test
