--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mahal",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Simple, modern web application framework for UI development.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -30,7 +30,8 @@
     "deploy": "npm run build:ci",
     "un:module": "cd tests && npm un mahal && npm un mahal-html-compiler",
     "install:same:version": "cd tests && node install_same_version.js",
-    "prepublishOnly": "npm run install:same:version && npm run deploy"
+    "prepublishOnly": "npm run install:same:version && npm run deploy",
+    "prepare:husky": "husky install"
   },
   "repository": {
     "type": "git",
@@ -54,10 +55,5 @@
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.1"
   },
-  "dependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run un:module"
-    }
-  }
+  "dependencies": {}
 }
