add coding guidelines, contributing

--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "build:pack": "npm run build && npm run webpack:test && npm pack",
     "build:test": "npm run install:compiler && npm run build:pack && npm run test",
     "build:test:dev": "npm run build:pack && cd tests && npm run install:dev",
-    "test": "npm run test:general",
+    "test": "cd tests && npm run install:test",
     "lint": "tslint src/**/*.ts",
-    "test:general": "cd tests && npm run install:test",
-    "install:general": "npm run build:pack && cd tests && npm run install:lib",
-    "test:todo": "cd tests/todo && npm run install:test",
-    "test:dev": "npm run build && npm run test:general",
-    "test:prod": "karma start test/karma.config.prod.js",
+    "test:dev": "npm run build && npm run test",
+    "test:prod": "npm run build && npm run test",
     "build:dev": "npm run lint && npm run build",
     "build:prod": "npm run webpack:prod",
     "pack:test": "npm pack && npm run test",
