--- a/package.json
+++ b/package.json
@@ -54,5 +54,7 @@
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "morphdom": "^2.6.1"
+  }
 }
