--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
         "lib": [
             "es2015",
             "dom"
-        ]
+        ],
+        "allowSyntheticDefaultImports": true
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ]
 }
