setup test for prod build

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "build:compiler:dev": "npm run install:compiler && npm run webpack:dev",
     "build:pack": "npm run build && npm run webpack:test && npm pack",
     "build:test": "npm run install:compiler && npm run build:pack && npm run test",
-    "build:test:dev": "npm run build:pack && cd tests && npm run install:dev",
     "test": "cd tests && npm run install:test",
+    "test:prod": "cd tests && npm run install:test:prod",
     "lint": "tslint src/**/*.ts",
-    "test:dev": "npm run build && npm run test",
-    "test:prod": "npm run build && npm run test",
+    "build:test:dev": "npm run build && npm run test",
+    "build:test:prod": "npm run build && npm run test:prod",
     "build:dev": "npm run lint && npm run build",
     "build:prod": "npm run webpack:prod",
     "pack:test": "npm pack && npm run test",
+    "pack:test:prod": "npm pack && npm run test:prod",
     "build:all": "npm run webpack:dev && npm run webpack:prod && npm run webpack:test",
     "install:compiler@latest": "cd tests && npm i mahal-html-compiler@latest",
-    "build:ci": "npm run lint && npm run build:all && npm pack && npm run install:compiler@latest && npm run pack:test",
+    "build:ci": "npm run lint && npm run build:all && npm pack && npm run install:compiler@latest && npm run pack:test && npm run pack:test:prod",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
     "webpack:test": "webpack --config webpack/webpack.test.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
