--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "mahal",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Simple, modern web application framework for UI development.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
+  "keywords": [
+    "ui",
+    "mahal",
+    "html",
+    "framework",
+    "simple"
+  ],
   "scripts": {
     "install:compiler": "node build_helper/compiler_installer.js",
     "build": "npm run webpack:dev",
