--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/ujjwalguptaofficial/mahal#readme",
   "devDependencies": {
     "@types/node": "^14.6.2",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "del-cli": "^4.0.1",
     "husky": "^7.0.4",
