--- a/package.json
+++ b/package.json
@@ -63,7 +63,5 @@
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.1.1"
   },
-  "dependencies": {
-    "morphdom": "^2.6.1"
-  }
+  "dependencies": {}
 }
