--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mahal",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Simple, modern web application framework for UI development.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "install:compiler": "node build_helper/compiler_installer.js",
+    "install:util": "node build_helper/util_installer.js",
     "build": "npm run webpack:dev",
     "build:compiler:dev": "npm run install:compiler && npm run webpack:dev",
     "build:pack": "npm run build && npm run webpack:test && npm pack",
@@ -28,7 +29,9 @@
     "pack:test:prod": "npm pack && npm run test:prod",
     "build:all": "npm run webpack:dev && npm run webpack:prod && npm run webpack:test",
     "install:compiler@latest": "cd tests && npm i mahal-html-compiler@latest",
-    "build:ci": "npm run lint && npm run build:all && npm pack && npm run install:compiler@latest && npm run pack:test && npm run pack:test:prod",
+    "install:util@latest": "cd tests && npm i @mahaljs/util@latest",
+    "install:ci@latest": "npm run install:compiler@latest && npm run install:util@latest",
+    "build:ci": "npm run lint && npm run build:all && npm pack && npm run install:ci@latest && npm run pack:test && npm run pack:test:prod",
     "webpack:dev": "webpack --config webpack/webpack.dev.config.js",
     "webpack:test": "webpack --config webpack/webpack.test.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
