--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "del-cli": "^4.0.1",
+    "html-tags": "^3.2.0",
     "husky": "^7.0.4",
     "ts-loader": "^8.0.2",
     "tslint": "^6.1.3",
