--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mahal",
-  "version": "1.7.2",
+  "version": "1.8.0",
   "description": "Simple, modern web application framework for UI development.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -47,7 +47,7 @@
     "url": "git+https://github.com/ujjwalguptaofficial/mahal.git"
   },
   "author": "Ujjwal Gupta <https://ujjwalguptaofficial.github.io/>",
-  "license": "APACHE 2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ujjwalguptaofficial/mahal/issues"
   },
